salesforce/force-app/main/default/objects/Lead/fields/Acquisition_Channel__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Channel__c</fullName>
    <description>Channel that first acquired this user in GA4 (first touch).</description>
    <inlineHelpText>Channel that first acquired this user in GA4 (first touch).</inlineHelpText>
    <label>Acquisition Channel</label>
    <length>40</length>
    <type>Text</type>
</CustomField>