salesforce/force-app/main/default/objects/Lead/fields/GA4_User_Pseudo_Id__c.field-meta.xml
<CustomField>
    <fullName>GA4_User_Pseudo_Id__c</fullName>
    <description>GA4's anonymous user id (user_pseudo_id). Used for upserts. No personal data is stored.</description>
    <externalId>true</externalId>
    <inlineHelpText>GA4's anonymous user id (user_pseudo_id). Used for upserts. No personal data is stored.</inlineHelpText>
    <label>GA4 User Pseudo ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>