salesforce/force-app/main/default/objects/Lead/fields/Highest_Funnel_Stage__c.field-meta.xml
<CustomField>
    <fullName>Highest_Funnel_Stage__c</fullName>
    <description>Furthest point reached without buying: 'Add to cart' or 'Checkout'.</description>
    <inlineHelpText>Furthest point reached without buying: 'Add to cart' or 'Checkout'.</inlineHelpText>
    <label>Highest Funnel Stage</label>
    <length>40</length>
    <type>Text</type>
</CustomField>